# EDES-Localizer

./: README.md  pyproject.toml  requirements.txt
scripts/: run_edvesv.py
src/edvesv/: cropping.py  device.py  io.py  predict.py  rpca.py  runner.py  signal.py
