[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edvesv-rpca"
version = "0.1.0"
description = "EDV/ESV detection via RobustPCA + cropping strategies (YOLO/full/fixed)."
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
